# hw-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
config/: default_config.yaml
data/: test.csv.dvc  train.csv.dvc
hw_mlops/: config.py  inference_runner.py  model_trainer.py
model/: model.pkl.dvc
notebooks/: .gitignore  experiments.ipynb.dvc
prediction_results/: results.csv.dvc
